--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "element-plus": "^1.0.2-beta.40",
-    "vue": "^3.0.11",
-    "vue-router": "4.0.5",
-    "vuex": "^4.0.0"
+    "@element-plus/icons-vue": "^1.0.0",
+    "axios": "^0.26.0",
+    "element-plus": "^2.0.3",
+    "vue": "^3.2.31",
+    "vue-router": "4.0.12",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.2.1",
-    "@vue/compiler-sfc": "^3.0.11",
-    "vite": "^2.1.5"
+    "@vitejs/plugin-vue": "^2.2.2",
+    "@vue/compiler-sfc": "^3.2.31",
+    "vite": "^2.8.4"
   }
 }
